[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
tungstenite = "0.17.3"
shared = { path = "../shared" }
serde_json = "1.0.87"
glam = { version = "0.22.0", features = ["scalar-math", "serde"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
mio = { version = "0.8.5", features = ["net", "os-poll"] }
futures = "0.3.25"
async-recursion = "1.0.0"
libc = "0.2.137"
