[package]
name = "server-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
glam = { version = "0.21.3", features = ["scalar-math", "serde"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
warp = "0.3.3"
